--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ env:
 - PYTHONPATH=.
 python:
   - "3.5"
-install: "pip install -r requirements.txt"
-script: py.test
+install:
+  - pip install -r requirements.txt
+  - pip install pep8
+script:
+  - py.test
+  - pep8 *.py
